--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "todo_list",
   "version": "1.0.0",
   "scripts": {
-    "start": "node app.ts",
-    "dev": "nodemon app.ts"
+    "start": "node dist/app.js",
+    "build": "tsc",
+    "dev": "nodemon --exec ts-node src/app.ts"
   },
   "dependencies": {
     "axios": "^1.7.2",
@@ -13,6 +14,7 @@
     "@types/express": "^4.17.21",
     "@types/node": "^22.0.0",
     "nodemon": "^3.1.4",
+    "ts-node": "^10.9.2",
     "typescript": "^5.5.4"
   }
 }
