--- a/package.json
+++ b/package.json
@@ -11,10 +11,14 @@
     "express": "^4.19.2"
   },
   "devDependencies": {
+    "@eslint/js": "^9.8.0",
     "@types/express": "^4.17.21",
     "@types/node": "^22.0.0",
+    "eslint": "^9.8.0",
+    "globals": "^15.8.0",
     "nodemon": "^3.1.4",
     "ts-node": "^10.9.2",
-    "typescript": "^5.5.4"
+    "typescript": "^5.5.4",
+    "typescript-eslint": "^7.18.0"
   }
 }
